# XoneAI

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  README.md  api.md  xoneai_cli_guide.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yml  build-image.yml  coverage.yml  docker-publish.yml  gemini-issue-review.yml  publish-pypi.yml  python-package.yml  python-publish.yml  release.yml  test-comprehensive.yml  test-core.yml  test-extended.yml  test-frameworks.yml  test-optimized.yml  test-real.yml  test-windows.yml  unittest.yml  update-api-md.yml  update-docs-parity.yml  update-parity-tracker.yml
docker/: .env.template  Dockerfile  Dockerfile.chat  Dockerfile.dev  Dockerfile.praisonaiagents  Dockerfile.serve  Dockerfile.ui  README.md  docker-compose.dev.yml  docker-compose.yml  quick-start.sh  services.yaml
docker/bots/: Dockerfile  README.md  docker-compose.yml
docker/call/: Dockerfile  README.md
examples/: README.md  agent_centric_api.py  endpoints_example.py  guardrail_example_fixed.py  recipe_output_modes.py  workflow_output_modes.py
examples/acp/: README.md  custom_agent_acp.py
examples/agent_tools/: agent_centric_example.py
examples/approval/: README.md  agent_approval.py  discord_approval.py  http_approval.py  slack_approval.py  telegram_approval.py
examples/async_runs/: README.py  cancel.sh  cli_submit_poll_result.sh  idempotency.sh  sdk_submit_poll_result.py  sse_stream.sh
examples/background/: basic_background.py
examples/python/plugin_template/: README.md  pyproject.toml
examples/python/plugin_template/src/xoneai_example_plugin/: __init__.py
src/xoneai/: api.py  (+18 more)
(+2926 files in other folders)
